# breezy

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  ROADMAP.md
cli/: CMakeLists.txt
cli/include/commands/: command_base.hpp  help_command.hpp  run_command.hpp  version_command.hpp
cli/include/services/: argument_parser.hpp  command_table.hpp
cli/src/: main.cpp
cli/src/commands/: help_command.cpp  run_command.cpp  version_command.cpp
cli/src/services/: argument_parser.cpp  command_table.cpp
runtime/: CMakeLists.txt
runtime/include/: breezy_runtime_interface.h
runtime/include/breezy/: runtime_instance.hpp
runtime/include/breezy/frontend/: ast.hpp  interpreter.hpp  lexer.hpp  parser.hpp  token.hpp
runtime/src/: breezy_runtime_interface.cpp  runtime_instance.cpp
runtime/src/frontend/: interpreter.cpp  lexer.cpp  parser.cpp
sandbox/: entry.bz
